# pybullet_robot

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  package.xml  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
demos/: hyb_ctrl_test.py  simple_ctrl_test.py
examples/: README.md  demo_ik_headless_control.py  demo_ik_interface.py  demo_joint_position_control.py  demo_quadruped_ik.py  demo_task_space_control.py  demo_utils.py  impedance_controllers.py
pybullet_robot/: __init__.py  bullet_robot.py  pybullet_ik_interface.py
pybullet_robot/utils/: robot_loader_utils.py  urdf_utils.py
src/: set_env.sh
src/pybullet_robot/: bullet_robot.py
src/pybullet_robot/controllers/: __init__.py  ctrl_config.py  os_controller.py  os_hyb_ctrl.py  os_impedance_ctrl.py  utils.py
src/pybullet_robot/robots/: __init__.py
src/pybullet_robot/robots/bullet_panda/: panda_robot.py  panda_robot_config.py
src/pybullet_robot/robots/bullet_panda/models/: panda_arm.urdf  panda_arm_with_block.urdf
src/pybullet_robot/utils/: __init__.py  simple_ft_smoother.py
src/pybullet_robot/worlds/: __init__.py  simple_world.py
src/pybullet_robot/worlds/models/: plane.urdf  table.urdf
tests/: test_smoke.py
